--- a/diggers/app.cfg
+++ b/diggers/app.cfg
@@ -5,8 +5,9 @@ app_description = A remake of the classic Amiga/DOS game for Windows
 app_icon = app/icon.png
 app_longname = Diggers
 app_shortname = Diggers
-app_version = R45
+app_version = R46
 app_website = github.com/Mhatxotic/Engine
+ast_modbundle = true
 con_font = app/console.ttf
 con_fontflags = 4
 con_fontheight = 8
