--- a/diggers/app.cfg
+++ b/diggers/app.cfg
@@ -11,8 +11,9 @@ ast_modbundle = true
 con_font = app/console.ttf
 con_fontflags = 4
 con_fontheight = 8
+con_fontpadding = 1
 con_fontlspacing = 1
-con_fonttexsize = 128
+con_fonttexsize = 256
 con_fontwidth = 8
 err_minram = 67108864
 err_minvram = 8388608
